<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/btn_registrar"
        android:onClick="registrar"/>

    <Button
        android:id="@+id/btnModificar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnRegistrar"
        android:layout_marginTop="25dp"
        android:text="@string/btn_modificar"
        android:onClick="modificar"/>

    <Button
        android:id="@+id/btnBorrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnModificar"
        android:layout_marginTop="25dp"
        android:text="@string/btn_borrar"
        android:onClick="borrar"/>

    <Button
        android:id="@+id/btnConsultar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnBorrar"
        android:layout_marginTop="25dp"
        android:text="@string/btn_consultar"
        android:onClick="consultar"/>


</RelativeLayout>