<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConsultarActivity">


    <TextView
        android:id="@+id/tvConsulta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/consultta"
        android:textSize="24sp"
        android:textStyle="bold"
        >


    </TextView>

    <LinearLayout
        android:id="@+id/llfiltro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/tvConsulta">

        <EditText
            android:id="@+id/etservidor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/servidor"
        >

        </EditText>

        <Button
            android:id="@+id/Concultar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/btn_consultar"
            android:onClick="consultar">
        </Button>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rwC"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/llfiltro"
        android:layout_marginTop="16dp"

        />
</RelativeLayout>